Refactored ConnectedComponents2D to use an int[] backing instead of relying on the image pixel type.
Did not add performance increase, but prevents the number of labels from exceeding the image pixel value.